@@ -1953,6 +1953,13 @@ or putting into), held or wielded, worn, or whenever anyone enters the same room
 The third argument is what the object should say when the conditions have been \
 met.  The object will only impart the message once before the spell expires.
 
+SPELL_MAJESTY=<ABILITY>\
+Usage    : CAST "MAJESTY"\n\r\
+Example  : cast "majesty" bob\n\r\
+This powerful magic allows the target to be perceived as the Monarch of their \
+race, allowing them to order those of their race, be passed over for crimes, \
+and receive the genuflection of their subjects. 
+
 SPELL_MAGICALAURA=SPELL_MAGICAL_AURA
 SPELL_MAGICAL_AURA=<ABILITY>\
 Usage    : CAST "MAGICAL AURA" [TARGET NAME] \n\r\
