@@ -13,6 +13,7 @@
  12. New clan skill: Await Clan Ship
  13. The "Know Plants" skill will now report on edible-ness.
  14. Some divination spells are now more mob-follower-friendly. (e.g. Find Directions)
+ 15. New Spell "Majesty", the effects of which can only be wished for.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
